--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,7 @@
   min-height: 100vh;
   background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
   color: #fff;
+  flex-direction: column;
 }
 
 .sidebar {
@@ -80,38 +81,6 @@
   font-weight: 600;
 }
 
-.section-nav, .mobile-nav {
-  background: rgba(0, 0, 0, 0.85);
-  border-radius: 10px;
-  padding: 15px;
-  margin-bottom: 25px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.4);
-}
-
-.section-nav h3, .mobile-nav h3 {
-  color: #ffd700;
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-.section-nav a, .mobile-nav a {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: #ccc;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 6px;
-  margin-bottom: 8px;
-  transition: 0.3s;
-}
-
-.section-nav a:hover, .mobile-nav a:hover {
-  background: #ffd700;
-  color: #000;
-  font-weight: bold;
-}
-
 .card {
   background: rgba(255, 255, 255, 0.05);
   padding: 20px;
@@ -130,6 +99,47 @@
 .card p {
   font-size: 15px;
   color: #eee;
+}
+
+.mobile-nav-bar {
+  display: none;
+  background: #111;
+  padding: 10px 0;
+  border-bottom: 3px solid transparent;
+  position: sticky;
+  top: 0;
+  z-index: 99;
+  overflow-x: auto;
+}
+
+.mobile-nav-bar nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 10px;
+}
+
+.mobile-nav-bar a {
+  color: #ffd700;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 12px;
+  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.1);
+  transition: all 0.3s;
+}
+
+.mobile-nav-bar a:hover {
+  background: #ffd700;
+  color: #000;
+}
+
+.diagonal-line {
+  height: 3px;
+  background: linear-gradient(to right, transparent, #ffd700, transparent);
+  transform: skewY(-3deg);
+  margin-bottom: 20px;
 }
 
 .back-to-top {
@@ -158,21 +168,30 @@ footer {
   .sidebar {
     display: none;
   }
-
   .main {
     margin-left: 0;
     padding: 15px;
   }
-
-  .topbar h1 {
-    font-size: 18px;
+  .mobile-nav-bar {
+    display: block;
   }
 }
 
   </style>
 </head>
 <body>
-  <div class="sidebar">
+  <!-- Mobile Nav -->
+  <div class="mobile-nav-bar">
+    <nav>
+      <a href="downloads.html"><i class="fas fa-file-download"></i></a>
+      <a href="events.html"><i class="fas fa-calendar"></i></a>
+      <a href="news.html"><i class="fas fa-bullhorn"></i></a>
+      <a href="executives.html"><i class="fas fa-users"></i></a>
+      <a href="admin.html"><i class="fas fa-lock"></i></a>
+      <a href="contact.html"><i class="fas fa-phone"></i></a>
+    </nav>
+  </div>
+  <div class="diagonal-line"></div>  <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
     <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
@@ -181,68 +200,29 @@ footer {
     <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
     <a href="admin.html"><i class="fas fa-lock"></i> Admin</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-    <a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
   </div>  <div class="main">
     <div class="topbar">
       <h1>Welcome to Finance Point Dashboard</h1>
-    </div><div class="mobile-nav" style="display: none;" id="mobileNav">
-  <h3><i class="fas fa-bars"></i> Navigation</h3>
-  <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
-  <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
-  <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
-  <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
-  <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
-  <a href="admin.html"><i class="fas fa-lock"></i> Admin</a>
-  <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  <a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
-</div>
-
-<script>
-  if (window.innerWidth < 768) {
-    document.getElementById('mobileNav').style.display = 'block';
-  }
-</script>
-
-<div class="section-nav">
-  <h3><i class="fas fa-bars"></i> Quick Dashboard Menu</h3>
-  <a href="#announcements"><i class="fas fa-bullhorn"></i> Announcements</a>
-  <a href="#executives"><i class="fas fa-users"></i> Executives</a>
-  <a href="#events"><i class="fas fa-calendar"></i> Events</a>
-  <a href="#facts"><i class="fas fa-lightbulb"></i> Finance Facts</a>
-  <a href="#tips"><i class="fas fa-graduation-cap"></i> Academic Tips</a>
-  <a href="#quote"><i class="fas fa-quote-left"></i> Quote</a>
-</div>
-
-<div class="card" id="announcements">
+    </div><div class="card">
   <h2><i class="fas fa-bullhorn"></i> Announcement</h2>
   <p>Test for all 200 level students holds this Friday at LT1 by 10am. Attendance is compulsory.</p>
 </div>
 
-<div class="card" id="executives">
-  <h2><i class="fas fa-users"></i> Executives</h2>
-  <p>President: John Doe<br>PRO: OBA<br>Treasurer: Jane Smith</p>
-</div>
-
-<div class="card" id="events">
-  <h2><i class="fas fa-calendar"></i> Upcoming Event</h2>
-  <p>Finance Summit 2025 - July 15th at the New Auditorium.</p>
-</div>
-
-<div class="card" id="facts">
+<div class="card">
   <h2><i class="fas fa-lightbulb"></i> Finance Facts</h2>
-  <p>1️⃣ The Rule of 72: Divide 72 by your interest rate to estimate how long it will take your money to double.</p>
-  <p>2️⃣ Credit cards often charge interest rates over 20% — understanding APR can save you money.</p>
-  <p>3️⃣ Saving just ₦100 a day adds up to over ₦36,000 a year — small habits matter.</p>
+  <p>📊 The Rule of 72 helps estimate how long your money takes to double with interest.</p>
+  <p>💳 Credit cards can charge over 20% APR — understand your rate!</p>
+  <p>💰 Saving ₦100 daily = ₦36,500 yearly. Start small, think big.</p>
 </div>
 
-<div class="card" id="tips">
+<div class="card">
   <h2><i class="fas fa-graduation-cap"></i> Academic Tips</h2>
-  <p>📌 Study in short focused intervals — the Pomodoro technique (25 min study, 5 min break) helps retention.</p>
-  <p>📌 Don’t just memorize, try teaching the topic to someone — it boosts understanding.</p>
-  <p>📌 Use past questions often — they help reveal patterns and boost confidence before exams.</p>
+  <p>🎯 Use Pomodoro (25 min study, 5 min rest).</p>
+  <p>🧠 Teach someone else — it boosts your understanding.</p>
+  <p>📘 Practice with past questions frequently.</p>
 </div>
 
-<div class="card" id="quote">
+<div class="card">
   <h2><i class="fas fa-quote-left"></i> Quote of the Day</h2>
   <p>"Discipline is the bridge between goals and achievement." — Jim Rohn</p>
 </div>
